0x07-python-test_driven_development/tests/5-text_indentation.txt
=======================================================
Doctest for module `5-text_indentation.py`
=======================================================
The module contains one function `text_indentation`
The functions print a text with two new lines after the following character "., ? and :"
One argument should be passed to the function
	text(str): The string to print
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Import module
------------------------------
	>>> print_text = __import__('5-text_indentation').text_indentation

Check for missing argument
------------------------------
	>>> print_text()
	Traceback (most recent call last):
		...
	TypeError: text_indentation() missing 1 required positional argument: 'text'

Check for correct argument type
----------------------------------
	>>> print_text(4)
	Traceback (most recent call last):
		...
	TypeError: text must be a string

	>>> print_text(float('inf'))
	Traceback (most recent call last):
		...
	TypeError: text must be a string

	>>> print_text(float('nan'))
	Traceback (most recent call last):
		...
	TypeError: text must be a string

	>>> print_text("Transfer idem ad modestiam vel temperantiam, quae est moderatio cupiditatum rationi oboediens")
	Transfer idem ad modestiam vel temperantiam, quae est moderatio cupiditatum rationi oboediens

	>>> print_text("Lorem ipsum dolor sit amet, consectetur adipiscing elit.Plus semper voluptatis?")
	Lorem ipsum dolor sit amet, consectetur adipiscing elit.
	<BLANKLINE>
	Plus semper voluptatis?
	<BLANKLINE>
